--- a/demo/src/sandboxes/yogan-react/package.json
+++ b/demo/src/sandboxes/yogan-react/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.jsx",
   "dependencies": {
     "@yogan-react": "*",
+    "@yogan-core": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3"
