--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "size-limit": "^4.10.1",
     "start-server-and-test": "^1.12.0",
     "tsd": "^0.14.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "valtio": "^0.8.2"
   },
   "prettier": {
     "semi": false,
