--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@yogan/react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/yogan-react.cjs.js",
   "module": "dist/yogan-react.esm.js",
   "types": "dist/yogan-react.cjs.d.ts",
   "license": "MIT",
+  "dependencies": {
+    "@yogan/core": ">=0.0.1"
+  },
   "peerDependencies": {
     "react": ">=16.8.0",
     "three": "*",
     "react-dom": ">=16.8.0",
-    "react-three-fiber": "*",
-    "@yogan/core": ">=0.0.1"
+    "react-three-fiber": "*"
   }
 }
