--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@yogan/vanilla",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/yogan-vanilla.cjs.js",
   "module": "dist/yogan-vanilla.esm.js",
   "types": "dist/yogan-vanilla.cjs.d.ts",
   "license": "MIT",
+  "dependencies": {
+    "@yogan/core": ">=0.0.1"
+  },
   "peerDependencies": {
     "react": ">=16.8.0",
     "three": "*",
-    "react-dom": ">=16.8.0",
-    "@yogan/core": ">=0.0.1"
+    "react-dom": ">=16.8.0"
   }
 }
