fix workflow release

--- a/demo/src/sandboxes/yogan-react/package.json
+++ b/demo/src/sandboxes/yogan-react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "yogan-react",
   "version": "1.0.0",
+  "private": true,
   "main": "src/index.jsx",
   "dependencies": {
     "@yogan-react": "*",
