--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yogan/core",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "main": "dist/yogan-core.cjs.js",
   "module": "dist/yogan-core.esm.js",
   "types": "dist/yogan-core.cjs.d.ts",
@@ -19,11 +19,7 @@
     ]
   },
   "dependencies": {
-    "@stitches/react": "0.1.0-canary.20",
-    "clipboard-polyfill": "^3.0.2",
-    "dequal": "^2.0.2",
-    "leva": "0.5.5",
-    "merge-value": "^1.0.0",
+    "leva": "^0.6.1",
     "valtio": "^0.8.2"
   }
 }
