--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,9 +2,11 @@
   "$schema": "https://unpkg.com/@changesets/config@1.5.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "linked": [],
+  "linked": [
+    ["@yogan/core", "@yogan/react", "@yogan/vanilla"]
+  ],
   "access": "public",
   "baseBranch": "main",
-  "updateInternalDependencies": "patch",
-  "ignore": []
+  "updateInternalDependencies": "minor",
+  "ignore": ["demo"]
 }
