--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
-        uses: changesets/action@main
+        uses: changesets/action@master
         with:
           fetch-depth: 0
           # This expects you to have a script called release which does a build for your packages and calls changeset publish
