--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yogan/core",
-  "version": "0.2.0",
+  "version": "0.2.1"
   "main": "dist/yogan-core.cjs.js",
   "module": "dist/yogan-core.esm.js",
   "types": "dist/yogan-core.cjs.d.ts",
