--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yogan/react",
-  "version": "0.2.0",
+  "version": "0.2.1"
   "main": "dist/yogan-react.cjs.js",
   "module": "dist/yogan-react.esm.js",
   "types": "dist/yogan-react.cjs.d.ts",
