--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     ]
   },
   "scripts": {
-    "postinstall": "patch-package && preconstruct dev",
+    "postinstall": "husky install && patch-package && preconstruct dev",
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
@@ -27,8 +27,9 @@
     "cypress:run": "cypress run",
     "demo:dev": "yarn workspace demo dev",
     "demo:build": "yarn workspace demo build",
-    "demo:serve": "cp ./demo/serve.json ./demo/dist && npx serve ./demo/dist",
-    "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run"
+    "demo:serve": "yarn workspace demo serve",
+    "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run",
+    "prepare": "husky install"
   },
   "size-limit": [
     {
@@ -59,7 +60,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@changesets/cli": "^2.14.1",
-    "@preconstruct/cli": "^2.0.6",
+    "@preconstruct/cli": "^2.1.0",
     "@size-limit/preset-big-lib": "^4.10.1",
     "@size-limit/preset-small-lib": "^4.10.1",
     "@storybook/addon-actions": "^6.1.21",
@@ -69,9 +70,9 @@
     "@storybook/react": "^6.1.21",
     "@testing-library/cypress": "^7.0.4",
     "@types/node": "^14.14.34",
-    "@types/react": "^17.0.3",
+    "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.2",
-    "@types/three": "^0.126.0",
+    "@types/three": "^0.127.1",
     "babel-eslint": "^10.1.0",
     "concurrently": "^6.0.0",
     "cypress": "^6.6.0",
@@ -83,15 +84,15 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.3",
+    "husky": "^6.0.0",
     "patch-package": "^6.4.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "size-limit": "^4.10.1",
     "start-server-and-test": "^1.12.0",
     "tsd": "^0.14.0",
     "typescript": "^4.2.3",
-    "valtio": "^0.8.2"
+    "valtio": "^1.0.4"
   },
   "prettier": {
     "semi": false,
