--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,6 +23,7 @@
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
+    "@react-three/fiber": "*",
     "three": "*"
   }
 }
